--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -1,4 +1,5 @@
 main {
+  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,8 +24,25 @@ main {
 }
 
 .band-select, .books-btn {
+  font-weight: 600;
   width: 70%;
   max-width: 18rem;
   height: 3rem;
+  min-height: 3rem;
   text-align: center;
+}
+
+.income-display {
+  min-height: 50%;
+  width: 100%;
+  max-width: 1000px;
+  border: none;
+  border-radius: 5px;
+  background-color: #808f855f;
+}
+
+@media screen and (min-width: 769px) {
+  .income-display {
+    min-height: 60%;
+  }
 }
