--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -33,16 +33,10 @@ main {
 }
 
 .income-display {
-  min-height: 50%;
+  height: 100%;
   width: 100%;
   max-width: 1000px;
   border: none;
   border-radius: 5px;
   background-color: #808f855f;
-}
-
-@media screen and (min-width: 769px) {
-  .income-display {
-    min-height: 60%;
-  }
 }
