Add message to books if no bands in user account

--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -40,3 +40,8 @@ main {
   border-radius: 5px;
   background-color: #808f855f;
 }
+
+.no-band-data-msg {
+  font-weight: 600;
+  text-align: center;
+}
