--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -20,10 +20,11 @@ main {
 .total-income-amt {
   font-size: 1.3rem;
   font-weight: 700;
-  margin-left: .25rem;
+  margin-left: 0.3rem;
 }
 
-.band-select, .books-btn {
+.band-select,
+.books-btn {
   font-weight: 600;
   width: 70%;
   max-width: 18rem;
