--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -40,6 +40,10 @@ main {
   border: none;
   border-radius: 5px;
   background-color: #808f855f;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem;
 }
 
 .no-band-data-msg {
