--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -43,6 +43,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-y: scroll;
 }
 
 .income-display-header {
@@ -58,17 +59,29 @@ main {
 .total-band-income-div {
   display: flex;
   align-items: center;
+  font-size: 1.1rem;
 }
 
 .total-band-income-div > h4 {
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .total-band-income-div > p {
   margin-left: 0.3rem;
+  font-weight: 500;
 }
 
 .no-band-data-msg {
   font-weight: 600;
   text-align: center;
+}
+
+.income-display-members {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.2rem;
+  height: 100%;
+  margin: auto;
+  font-size: 1.1rem;
 }
