--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -35,8 +35,10 @@ main {
 
 .income-display {
   height: 100%;
+  min-height: 40vh;
   width: 100%;
   max-width: 1000px;
+  margin-top: 0.5rem;
   border: none;
   border-radius: 5px;
   background-color: #808f855f;
