Change gray background colors

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ button,
 select {
   border: none;
   border-radius: 20px;
-  background-color: #808f855f;
+  background-color: #D2D7D4;
   color: #000;
   cursor: pointer;
 }
