--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -41,7 +41,7 @@ main {
   margin-top: 0.5rem;
   border: none;
   border-radius: 5px;
-  background-color: #808f855f;
+  background-color: #D2D7D4;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -55,7 +55,7 @@ main {
   gap: 0.5rem;
   width: 100%;
   padding: 1rem 0.5rem;
-  border-bottom: 1px solid #808f855f;
+  border-bottom: 1px solid #8f9591;
 }
 
 .total-band-income-div {
