Add active class and activate on member view button click

--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -33,6 +33,10 @@ main {
   text-align: center;
 }
 
+.books-btn.active {
+  background-color: #cfd11a;
+}
+ 
 .income-display {
   height: 100%;
   min-height: 40vh;
