--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -33,10 +33,11 @@ main {
   text-align: center;
 }
 
-.books-btn.active {
+.books-btn.active,
+.band-select.active {
   background-color: #cfd11a;
 }
- 
+
 .income-display {
   height: 100%;
   min-height: 40vh;
@@ -45,7 +46,7 @@ main {
   margin-top: 0.5rem;
   border: none;
   border-radius: 5px;
-  background-color: #D2D7D4;
+  background-color: #d2d7d4;
   display: flex;
   flex-direction: column;
   align-items: center;
