--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -1,5 +1,5 @@
 main {
-  height: 90vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,7 +50,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-y: scroll;
 }
 
 .income-display-header {
