Add elements to display indicating search results

--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -94,6 +94,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
   gap: 0.2rem;
   height: 100%;
   margin: 1rem auto;
