--- a/src/components/AggregateDisplay/AggregateData.css
+++ b/src/components/AggregateDisplay/AggregateData.css
@@ -1,6 +1,6 @@
 .all-mem-agg-section,
 .total-agg-section {
-  min-height: 37vh;
+  height: 37vh;
   width: 100%;
   max-width: 1000px;
   border-radius: 5px;
@@ -8,6 +8,42 @@
 
 .all-mem-agg-section {
   background-color: #d2d7d4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.all-mem-agg-container {
+  width: 85%;
+  max-width: 700px;
+  height: 95%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.all-mem-agg-header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.all-mem-agg-display {
+  overflow-y: scroll;
+  height: 28vh;
+  width: 100%;
+}
+
+.mem-agg-income-div {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  border-bottom: 1px solid #b8b8b8;
+}
+
+.mem-agg-income {
+  width: 5rem;
 }
 
 .total-agg-section {
