--- a/src/components/AggregateDisplay/AggregateData.css
+++ b/src/components/AggregateDisplay/AggregateData.css
@@ -1,12 +1,12 @@
 .all-mem-agg-section,
 .total-agg-section {
-  height: 37vh;
   width: 100%;
   max-width: 1000px;
   border-radius: 5px;
 }
 
 .all-mem-agg-section {
+  height: 37vh;
   background-color: #d2d7d4;
   display: flex;
   flex-direction: column;
@@ -48,5 +48,29 @@
 }
 
 .total-agg-section {
+  height: 100%;
   background-color: #571e368f;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.total-table {
+  width: 100%;
+  min-width: fit-content;
+  max-width: 700px;
+  border-collapse: collapse;
+}
+
+.total-table-label-col,
+.total-table-amt-col {
+  font-size: 0.85rem;
+  border-bottom: 1px solid black;
+}
+
+.total-table-amt-col {
+  font-weight: 700;
+  padding-left: 1rem;
+  text-align: right;
 }
