--- a/src/components/AggregateDisplay/AggregateDisplay.css
+++ b/src/components/AggregateDisplay/AggregateDisplay.css
@@ -33,6 +33,7 @@
   overflow-y: scroll;
   height: 28vh;
   width: 100%;
+  padding-top: 0.25rem;
 }
 
 .mem-agg-table-row {
@@ -41,6 +42,10 @@
   justify-content: space-between;
   text-align: center;
   border-bottom: 1px solid #b8b8b8;
+}
+
+.mem-agg-table-row:last-child {
+  border: none;
 }
 
 .mem-agg-name {
@@ -66,8 +71,7 @@
   border-collapse: collapse;
 }
 
-.total-table-label-col,
-.total-table-amt-col {
+.total-table tr:not(:last-child) {
   border-bottom: 1px solid #571e36;
 }
 
